kube/kustomization/dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: kuard-deployment
  name: kuard-deployment
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kuard-deployment
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: kuard-deployment
    spec:
      containers:
      - image: gcr.io/kuar-demo/kuard-amd64:blue
        name: kuard-amd64
        resources: {}
status: {}
