kube/kustomization/svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: kuard-deployment
  name: kuard-8080
  namespace: default
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: kuard-deployment
status:
  loadBalancer: {}
