kube/kustomization/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: my-ingress
  namespace: default
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: kuard-8080
            port:
              number: 8080
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
